ags (3.12.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_audio_toolbox_open() to set samplerate and integer format
	* fixed ags_audio_toolbox_read() to clear buffer

ags (3.12.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed SIGSEGV with AgsRampAccelerationDialog
	* fixed SIGSEGV with AgsSelectAccelerationDialog
	* fixed missing paste flags implementation in AgsCompositeToolbar callbacks
	* fixed missing channel selector control implementation in AgsCompositeToolbar callbacks

ags (3.12.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved restore of AgsPiano shift while AgsCompositeEditor::machine-changed()
	* improved AgsAutomationEdit draw all automation if not focused
	* minor improvements

ags (3.12.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed SIGSEGV while restore from AgsSimpleFile XML
	* fixed SIGSEGV after destroy AgsMachine
	* fixed functional UI tests
	* fixed typo in ags/test/ags_functional_loop_0??_xml_test.c

ags (3.12.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented composite editor

ags (3.12.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ref-count over-flow in ags_thread.c


ags (3.12.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed layout of AgsLinkCollectionEditor and AgsResizeEditor
	* fixed mnemonic of AgsConnectionEditor and AgsAudiorec
	* fixed ref-count over-flow in ags_thread.c

ags (3.11.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed functional tests launch application context
	* fixed AgsDevout's AgsSoundcardThread started while playback initialization failed.
	* fixed missing plugins in context menu

ags (3.11.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing default values of ags-fx-vst3
	* fixed missing VST3 plugin instantiate of AgsVst3Bridge
	* fixed missing AgsLiveVst3Bridge effect bulk callback
